libk/REND/delme
/home/ubuntu/git/repo.1/libk/REND/test.c: In function ‘main’:
/home/ubuntu/git/repo.1/libk/REND/test.c:77:41: error: expected ‘)’ before ‘&’ token
              void bildHL_1(query, abuf, &look);
                                         ^
/home/ubuntu/git/repo.1/libk/REND/test.c:78:23: warning: passing argument 1 of ‘bildRBUF’ from incompatible pointer type [-Wincompatible-pointer-types]
              bildRBUF(abuf,&rbuf);
                       ^~~~
In file included from /home/ubuntu/git/repo.1/libk/REND/test.c:3:0:
/home/ubuntu/git/repo.1/libk/REND/../libk.h:29:6: note: expected ‘char **’ but argument is of type ‘char *’
 void bildRBUF(char** abuf, char** rbuf);
      ^~~~~~~~
/home/ubuntu/git/repo.1/libk/REND/test.c:84:14: warning: statement with no effect [-Wunused-value]
              free abuf; free rbuf;
              ^~~~
/home/ubuntu/git/repo.1/libk/REND/test.c:84:19: error: expected ‘;’ before ‘abuf’
              free abuf; free rbuf;
                   ^~~~
/home/ubuntu/git/repo.1/libk/REND/test.c:84:25: warning: statement with no effect [-Wunused-value]
              free abuf; free rbuf;
                         ^~~~
/home/ubuntu/git/repo.1/libk/REND/test.c:84:30: error: expected ‘;’ before ‘rbuf’
              free abuf; free rbuf;
                              ^~~~
make: *** [dryrun] Error 1
